# orb_openmesh

./: CMakeLists.txt  Mesh.h  OrbifoldTutte.h
include/: CutMesh.h  Cutting.h  Flattening.h  FlatteningSolver.h  MeshIO.h  MeshTypes.h  MeshUtils.h  PosConstraints.h  TreeCutter.h
src/: CutMesh.cpp  Cutting.cpp  Flattening.cpp  FlattenningSolver.cpp  MeshIO.cpp  MeshUtils.cpp  OrbifoldParam.h  PosConstraints.cpp  TreeCutter.cpp  main.cpp
